--- a/.github/workflows/kotlin.yml
+++ b/.github/workflows/kotlin.yml
@@ -1,28 +1,9 @@
 name: Kotlin CI
 
 on:
-  push:
-    branches:
-      - main
   pull_request:
 
 jobs:
-  dokka:
-    name: Assemble
-    runs-on: ubuntu-latest
-    steps:
-      - uses: actions/checkout@v2
-      - name: set up JDK 11.0.7
-        uses: actions/setup-java@v1
-        with:
-          java-version: 11.0.7
-
-      ## Actual task
-      - name: Assemble with gradle — make sure everything builds
-        run: ./gradlew assemble --no-daemon --stacktrace
-
-
-  # These are all pretty quick so we run them on a single shard. Fewer shards, less queueing.
   check:
     name: Check
     runs-on: ubuntu-latest
@@ -37,7 +18,7 @@ jobs:
 
       ## Actual task
       - name: Check with Gradle
-        run: ./gradlew test --no-daemon --stacktrace --continue
+        run: ./gradlew assemble test --no-daemon --stacktrace --continue
         # Decoder:
         #    --continue: Run all checks, even if some fail.
         #    test: unit tests
