--- a/.github/workflows/kotlin.yml
+++ b/.github/workflows/kotlin.yml
@@ -41,3 +41,10 @@ jobs:
         run: ./gradlew build --no-daemon --stacktrace --continue --scan
         # Decoder:
         #    --continue: Run all checks, even if some fail.
+
+      - name: Publish snapshot release
+        run: ./gradlew publish --no-parallel --no-daemon
+        if: github.repository == 'iomu/krpc' && github.ref == 'refs/heads/main' && ${{ matrix.java-version }} == '11'
+        env:
+          ORG_GRADLE_PROJECT_mavenCentralUsername: ${{ secrets.SONATYPE_NEXUS_USERNAME }}
+          ORG_GRADLE_PROJECT_mavenCentralPassword: ${{ secrets.SONATYPE_NEXUS_PASSWORD }}
