--- a/gradle.properties
+++ b/gradle.properties
@@ -1,1 +1,21 @@
 kotlin.code.style=official
+
+GROUP=dev.jomu.krpc
+VERSION_NAME=0.1.0-SNAPSHOT
+
+POM_DESCRIPTION=Simple Kotlin based RPC framework
+
+POM_URL=https://github.com/iomu/krpc
+POM_SCM_URL=https://github.com/iomu/krpc
+POM_SCM_CONNECTION=scm:git:git://github.com/iomu/krpc.git
+POM_SCM_DEV_CONNECTION=scm:git:ssh://git@github.com/iomu/krpc.git
+
+POM_LICENCE_NAME=The Apache Software License, Version 2.0
+POM_LICENCE_URL=http://www.apache.org/licenses/LICENSE-2.0.txt
+POM_LICENCE_DIST=repo
+
+POM_DEVELOPER_ID=iomu
+POM_DEVELOPER_NAME=Johannes Müller
+POM_DEVELOPER_URL=https://github.com/iomu/
+
+kotlin.mpp.stability.nowarn=true
