--- a/.github/workflows/kotlin.yml
+++ b/.github/workflows/kotlin.yml
@@ -1,26 +1,43 @@
 name: Kotlin CI
 
 on:
+  push:
+    branches:
+      - main
   pull_request:
 
 jobs:
   check:
     name: Check
     runs-on: ubuntu-latest
+
+    strategy:
+      fail-fast: false
+      matrix:
+        java-version:
+          - 8
+          - 9
+          - 10
+          - 11
+          - 12
+          - 13
+          - 14
+          - 15
+          - 16
+          - 17
+
     timeout-minutes: 20
     steps:
       - uses: actions/checkout@v2
       - uses: gradle/wrapper-validation-action@v1
-      - name: set up JDK 11.0.7
-        uses: actions/setup-java@v1
+      - name: set up JDK
+        uses: actions/setup-java@v2
         with:
-          java-version: 11.0.7
+          distribution: 'zulu'
+          java-version: ${{ matrix.java-version }}
 
       ## Actual task
       - name: Check with Gradle
-        run: ./gradlew assemble test --no-daemon --stacktrace --continue --scan
+        run: ./gradlew build --no-daemon --stacktrace --continue --scan
         # Decoder:
         #    --continue: Run all checks, even if some fail.
-        #    test: unit tests
-        #    apiCheck: binary compatibility
-        #    jmhJar: Build the JMH benchmarks to verify, but don't run them
