--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -1,4 +1,5 @@
 [versions]
+binaryCompatability = "0.8.0-RC"
 coroutines = "1.5.2"
 ktor = "1.6.3"
 ksp = "1.5.31-1.0.0"
@@ -33,6 +34,7 @@ okhttp-core = { module = "com.squareup.okhttp3:okhttp", version.ref = "okhttp" }
 okhttp-mockwebserver = { module = "com.squareup.okhttp3:mockwebserver", version.ref = "okhttp" }
 
 [plugins]
+binaryCompatability = { id = "org.jetbrains.kotlinx.binary-compatibility-validator", version.ref = "binaryCompatability" }
 kotlin-serialization = { id = "org.jetbrains.kotlin.plugin.serialization", version.ref = "kotlin" }
 ksp = { id = "com.google.devtools.ksp", version.ref = "ksp" }
 
